--- a/playgroundsound/playgroundsound/playgroundsound.vcxproj
+++ b/playgroundsound/playgroundsound/playgroundsound.vcxproj
@@ -135,12 +135,16 @@
     <ClCompile Include="ControllerComponent.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameObjectManager.cpp" />
+    <ClCompile Include="GO_BoundingBox.cpp" />
     <ClCompile Include="OldGameObject.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mesh.h" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="WwiseObjectComponent.cpp" />
+    <ClCompile Include="WwisePortalComponent.cpp" />
+    <ClCompile Include="WwiseRoomComponent.cpp" />
+    <ClCompile Include="WwiseRoomManager.cpp" />
     <ClCompile Include="WwiseSource\AkDefaultIOHookBlocking.cpp" />
     <ClCompile Include="WwiseSource\AkDefaultIOHookDeferred.cpp" />
     <ClCompile Include="WwiseSource\AkDefaultLowLevelIODispatcher.cpp" />
@@ -162,14 +166,19 @@
     <ClInclude Include="DiffractionPath.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameObjectManager.h" />
-    <ClInclude Include="GoTransform.h" />
-    <ClInclude Include="GoVector3.h" />
+    <ClInclude Include="GO_BoundingBox.h" />
+    <ClInclude Include="GO_Transform.h" />
+    <ClInclude Include="GO_Vector3.h" />
+    <ClInclude Include="GoVertex.h" />
     <ClInclude Include="OldGameObject.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObjectIDs.h" />
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="Triangle.h" />
     <ClInclude Include="WwiseObjectComponent.h" />
+    <ClInclude Include="WwisePortalComponent.h" />
+    <ClInclude Include="WwiseRoomComponent.h" />
+    <ClInclude Include="WwiseRoomManager.h" />
     <ClInclude Include="WwiseSource\AkDefaultIOHookBlocking.h" />
     <ClInclude Include="WwiseSource\AkDefaultIOHookDeferred.h" />
     <ClInclude Include="WwiseSource\AkDefaultLowLevelIODispatcher.h" />
