--- a/playgroundsound/playgroundsound/playgroundsound.vcxproj
+++ b/playgroundsound/playgroundsound/playgroundsound.vcxproj
@@ -137,7 +137,7 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameObjectManager.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Mesh.h" />
+    <ClCompile Include="GoMesh.h" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="WwiseObjectComponent.cpp" />
