--- a/playgroundsound/playgroundsound/playgroundsound.vcxproj
+++ b/playgroundsound/playgroundsound/playgroundsound.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="GoMesh.h" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
+    <ClCompile Include="RenderManager.cpp" />
     <ClCompile Include="WwiseObjectComponent.cpp" />
     <ClCompile Include="WwisePortalComponent.cpp" />
     <ClCompile Include="WwiseRoomComponent.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="GO_Transform.h" />
     <ClInclude Include="GO_Vector3.h" />
     <ClInclude Include="RenderComponent.h" />
+    <ClInclude Include="RenderManager.h" />
     <ClInclude Include="Triangle.h" />
     <ClInclude Include="WwiseID.h" />
     <ClInclude Include="WwiseObjectComponent.h" />
