--- a/playgroundsound/playgroundsound/playgroundsound.vcxproj.filters
+++ b/playgroundsound/playgroundsound/playgroundsound.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="GameObject.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
+    <ClCompile Include="RenderManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WwiseAPI.h">
@@ -217,6 +220,9 @@
     </ClInclude>
     <ClInclude Include="DiffractionManager.h">
       <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="RenderManager.h">
+      <Filter>Managers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
