Changed folder structure for all classes

--- a/playgroundsound/playgroundsound/playgroundsound.vcxproj
+++ b/playgroundsound/playgroundsound/playgroundsound.vcxproj
@@ -171,20 +171,19 @@ XCOPY $(SolutionDir)playgroundsound\Wwise_Project\GeneratedSoundBanks $(TargetDi
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CameraComponent.cpp" />
-    <ClCompile Include="ControllerComponent.cpp" />
-    <ClCompile Include="DiffractionManager.cpp" />
-    <ClCompile Include="GameObject.cpp" />
-    <ClCompile Include="GameObjectManager.cpp" />
+    <ClCompile Include="Components\CameraComponent.cpp" />
+    <ClCompile Include="Components\ControllerComponent.cpp" />
+    <ClCompile Include="Components\RenderComponent.cpp" />
+    <ClCompile Include="Components\WwiseObjectComponent.cpp" />
+    <ClCompile Include="Components\WwisePortalComponent.cpp" />
+    <ClCompile Include="Components\WwiseRoomComponent.cpp" />
+    <ClCompile Include="GameObject\GameObject.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="GoMesh.h" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="RenderComponent.cpp" />
-    <ClCompile Include="RenderManager.cpp" />
-    <ClCompile Include="WwiseObjectComponent.cpp" />
-    <ClCompile Include="WwisePortalComponent.cpp" />
-    <ClCompile Include="WwiseRoomComponent.cpp" />
-    <ClCompile Include="WwiseRoomManager.cpp" />
+    <ClCompile Include="Managers\DiffractionManager.cpp" />
+    <ClCompile Include="Managers\GameObjectManager.cpp" />
+    <ClCompile Include="Managers\RenderManager.cpp" />
+    <ClCompile Include="Managers\WwiseRoomManager.cpp" />
     <ClCompile Include="WwiseSource\AkDefaultIOHookBlocking.cpp" />
     <ClCompile Include="WwiseSource\AkDefaultIOHookDeferred.cpp" />
     <ClCompile Include="WwiseSource\AkDefaultLowLevelIODispatcher.cpp" />
@@ -204,26 +203,27 @@ XCOPY $(SolutionDir)playgroundsound\Wwise_Project\GeneratedSoundBanks $(TargetDi
     <ClInclude Include="..\raylib-master\src\raymath.h" />
     <ClInclude Include="..\raylib-master\src\rcamera.h" />
     <ClInclude Include="..\raylib-master\src\rlgl.h" />
-    <ClInclude Include="CameraComponent.h" />
-    <ClInclude Include="Component.h" />
-    <ClInclude Include="Components.h" />
-    <ClInclude Include="ControllerComponent.h" />
-    <ClInclude Include="DiffractionManager.h" />
+    <ClInclude Include="Components\CameraComponent.h" />
+    <ClInclude Include="Components\Component.h" />
+    <ClInclude Include="Components\Components.h" />
+    <ClInclude Include="Components\ControllerComponent.h" />
+    <ClInclude Include="Components\RenderComponent.h" />
+    <ClInclude Include="Components\WwiseObjectComponent.h" />
+    <ClInclude Include="Components\WwisePortalComponent.h" />
+    <ClInclude Include="Components\WwiseRoomComponent.h" />
     <ClInclude Include="DiffractionPath.h" />
-    <ClInclude Include="GameObject.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="GameObjectManager.h" />
-    <ClInclude Include="GoVertex.h" />
-    <ClInclude Include="GO_BoundingBox.h" />
-    <ClInclude Include="GO_Transform.h" />
-    <ClInclude Include="GO_Vector3.h" />
-    <ClInclude Include="RenderComponent.h" />
-    <ClInclude Include="RenderManager.h" />
+    <ClInclude Include="GameObject\GameObject.h" />
+    <ClInclude Include="GameObject\GoMesh.h" />
+    <ClInclude Include="GameObject\GoVertex.h" />
+    <ClInclude Include="GameObject\GO_BoundingBox.h" />
+    <ClInclude Include="GameObject\GO_Transform.h" />
+    <ClInclude Include="GameObject\GO_Vector3.h" />
+    <ClInclude Include="Managers\DiffractionManager.h" />
+    <ClInclude Include="Managers\GameObjectManager.h" />
+    <ClInclude Include="Managers\RenderManager.h" />
+    <ClInclude Include="Managers\WwiseRoomManager.h" />
     <ClInclude Include="Triangle.h" />
-    <ClInclude Include="WwiseObjectComponent.h" />
-    <ClInclude Include="WwisePortalComponent.h" />
-    <ClInclude Include="WwiseRoomComponent.h" />
-    <ClInclude Include="WwiseRoomManager.h" />
     <ClInclude Include="WwiseSource\AkDefaultIOHookBlocking.h" />
     <ClInclude Include="WwiseSource\AkDefaultIOHookDeferred.h" />
     <ClInclude Include="WwiseSource\AkDefaultLowLevelIODispatcher.h" />
