--- a/playgroundsound/playgroundsound/playgroundsound.vcxproj
+++ b/playgroundsound/playgroundsound/playgroundsound.vcxproj
@@ -118,7 +118,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;GRAPHICS_API_OPENGL_33;PLATFORM_DESKTOP;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)raylib-master;$(SolutionDir)Wwise_SDK\samples\SoundEngine\Win32;$(SolutionDir)Wwise_SDK\include;$(SolutionDir)Wwise\GeneratedSoundBanks;$(SolutionDir)playgroundsound\WwiseSource</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)raylib-master;$(SolutionDir)Wwise_SDK\samples;$(SolutionDir)Wwise_SDK\include;$(SolutionDir)Wwise\GeneratedSoundBanks</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <TreatWarningAsError>true</TreatWarningAsError>
     </ClCompile>
@@ -148,7 +148,7 @@ XCOPY $(SolutionDir)playgroundsound\Wwise_Project\GeneratedSoundBanks $(TargetDi
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_NDEBUG;AK_OPTIMIZED;_CONSOLE;GRAPHICS_API_OPENGL_33;PLATFORM_DESKTOP;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)raylib-master;$(SolutionDir)Wwise_SDK\samples\SoundEngine\Win32;$(SolutionDir)Wwise_SDK\include;$(SolutionDir)Wwise\GeneratedSoundBanks;$(SolutionDir)playgroundsound\WwiseSource</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)raylib-master;$(SolutionDir)Wwise_SDK\samples;$(SolutionDir)Wwise_SDK\include;$(SolutionDir)Wwise\GeneratedSoundBanks</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <TreatWarningAsError>true</TreatWarningAsError>
     </ClCompile>
